--- a/prt.graphit.sku.api/appsettings.Development.json
+++ b/prt.graphit.sku.api/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Host=192.168.0.30;Port=5432;Database=ProtocolStage;Uid=postgres;Password=RO8MJ1;"
+    "Database": "Host=10.10.11.35;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
   }
 }
