--- a/prt.graphit.sku.api/appsettings.Production.json
+++ b/prt.graphit.sku.api/appsettings.Production.json
@@ -6,7 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {    
+  "ConnectionStrings": {
     "Database": "Host=127.0.0.1;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
-  }
+  },
+  "Cors": [
+    "http://localhost:4200"
+  ]
 }
