--- a/prt.Graphite.Application/Prt.Graphit.Application.csproj
+++ b/prt.Graphite.Application/Prt.Graphit.Application.csproj
@@ -18,6 +18,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Prt.Graphit.Common\Prt.Graphit.Common.csproj" />
     <ProjectReference Include="..\Prt.Graphit.Domain\Prt.Graphit.Domain.csproj" />
+    <ProjectReference Include="..\Prt.Graphit.Identity.Common\Prt.Graphit.Identity.Common.csproj" />
+    <ProjectReference Include="..\prt.graphit.sku.api\Prt.Graphit.Identity.Common\Prt.Graphit.Identity.Common.csproj" />
   </ItemGroup>
   
 </Project>
