--- a/prt.graphit.sku.api/Prt.Graphit.Api.csproj
+++ b/prt.graphit.sku.api/Prt.Graphit.Api.csproj
@@ -18,13 +18,14 @@
     </PackageReference>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.4" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.1.4" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.4.1" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
     <PackageReference Include="Serilog" Version="2.9.0" />    
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
@@ -35,14 +36,19 @@
   <ItemGroup>
     <ProjectReference Include="..\Prt.Graphit.Api.Common\Prt.Graphit.Api.Common.csproj" />
     <ProjectReference Include="..\Prt.Graphit.Common\Prt.Graphit.Common.csproj" />
+    <ProjectReference Include="..\Prt.Graphit.Identity.Common\Prt.Graphit.Identity.Common.csproj" />
     <ProjectReference Include="..\Prt.Graphit.Infrastructure\Prt.Graphit.Infrastructure.csproj" />
     <ProjectReference Include="..\Prt.Graphit.Persistence\Prt.Graphit.Persistence.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Filters\" />
+    <None Include="appsettings.Production.json" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="appsettings.Production.json" />
+    <_ContentIncludedByDefault Remove="Prt.Graphit.Identity.Common\bin\Debug\netcoreapp3.1\Prt.Graphit.Identity.Common.deps.json" />
+    <_ContentIncludedByDefault Remove="Prt.Graphit.Identity.Common\bin\Debug\netstandard2.1\Prt.Graphit.Identity.Common.deps.json" />
+    <_ContentIncludedByDefault Remove="Prt.Graphit.Identity.Common\obj\project.assets.json" />
+    <_ContentIncludedByDefault Remove="Prt.Graphit.Identity.Common\obj\project.packagespec.json" />
+    <_ContentIncludedByDefault Remove="Prt.Graphit.Identity.Common\obj\Prt.Graphit.Identity.Common.csproj.nuget.dgspec.json" />
   </ItemGroup>
 
 </Project>
