--- a/prt.Graphite.Application/Prt.Graphit.Application.csproj
+++ b/prt.Graphite.Application/Prt.Graphit.Application.csproj
@@ -16,10 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Prt.Graphit.Api.Common\Prt.Graphit.Api.Common.csproj" />
     <ProjectReference Include="..\Prt.Graphit.Common\Prt.Graphit.Common.csproj" />
     <ProjectReference Include="..\Prt.Graphit.Domain\Prt.Graphit.Domain.csproj" />
     <ProjectReference Include="..\Prt.Graphit.Identity.Common\Prt.Graphit.Identity.Common.csproj" />
-    <ProjectReference Include="..\prt.graphit.sku.api\Prt.Graphit.Identity.Common\Prt.Graphit.Identity.Common.csproj" />
   </ItemGroup>
   
 </Project>
