--- a/prt.graphit.sku.api/appsettings.Development.json
+++ b/prt.graphit.sku.api/appsettings.Development.json
@@ -7,8 +7,11 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Host=192.168.1.54;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
-    //"Database": "Host=10.10.11.35;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
+    //"Database": "Host=192.168.1.54;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
+    "Database": "Host=10.10.11.35;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
+  },
+  "MapCatalog": {
+    "Path": "D:\\FileData\\map"
   },
   "Cors": [
     "http://localhost:4200"
