--- a/prt.graphit.sku.api/appsettings.Production.json
+++ b/prt.graphit.sku.api/appsettings.Production.json
@@ -9,6 +9,9 @@
   "ConnectionStrings": {
     "Database": "Host=127.0.0.1;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
   },
+  "MapCatalog": {
+    "Path": "D:\\FileData\\map"
+  },
   "Cors": [
     "http://localhost:4200"
   ]
