добавил сущности МО и картинки

--- a/prt.graphit.sku.api/appsettings.Production.json
+++ b/prt.graphit.sku.api/appsettings.Production.json
@@ -10,7 +10,10 @@
     "Database": "Host=127.0.0.1;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
   },
   "MapCatalog": {
-    "Path": "D:\\FileData\\map"
+    "Path": "D:\\FileData\\pictures_ssc_omni\\map"
+  },
+  "PictureCatalog": {
+    "Path": "D:\\FileData\\pictures_ssc_omni"
   },
   "Cors": [
     "http://localhost:4200"
