--- a/prt.graphit.sku.api/appsettings.Development.json
+++ b/prt.graphit.sku.api/appsettings.Development.json
@@ -8,10 +8,13 @@
   },
   "ConnectionStrings": {
     //"Database": "Host=192.168.1.54;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
-    "Database": "Host=10.10.11.35;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
+    "Database": "Host=10.10.11.35;Port=5432;Database=graphit-stage;Uid=postgres;Password=To1sty84;"
   },
   "MapCatalog": {
-    "Path": "D:\\FileData\\map"
+    "Path": "D:\\FileData\\pictures_ssc_omni\\map"
+  },
+  "PictureCatalog": {
+    "Path": "D:\\FileData\\pictures_ssc_omni"
   },
   "Cors": [
     "http://localhost:4200"
