добавил конфиг адреса хоста

--- a/prt.graphit.sku.api/appsettings.Development.json
+++ b/prt.graphit.sku.api/appsettings.Development.json
@@ -7,14 +7,17 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Host=192.168.1.54;Port=5432;Database=graphit-stage;Uid=postgres;Password=To1sty84;"
-    //"Database": "Host=10.10.11.35;Port=5432;Database=graphit-stage;Uid=postgres;Password=To1sty84;"
+    //"Database": "Host=192.168.1.54;Port=5432;Database=graphit-stage;Uid=postgres;Password=To1sty84;"
+    "Database": "Host=10.10.11.35;Port=5432;Database=graphit-stage;Uid=postgres;Password=To1sty84;"
   },
   "MapCatalog": {
     "Path": "D:\\FileData\\pictures_ssc_omni\\map"
   },
   "PictureCatalog": {
     "Path": "D:\\FileData\\pictures_ssc_omni"
+  },
+  "Host":{
+    "Address": "http://localhost:5000"
   },
   "Cors": [
     "http://localhost:4200"
