--- a/prt.graphit.sku.api/appsettings.Production.json
+++ b/prt.graphit.sku.api/appsettings.Production.json
@@ -15,6 +15,9 @@
   "PictureCatalog": {
     "Path": "D:\\FileData\\pictures_ssc_omni"
   },
+  "Host": {
+    "Address": "http://localhost:5000"
+  },
   "Cors": [
     "http://localhost:4200"
   ]
