вывод джоп. полей

--- a/prt.graphit.sku.api/appsettings.Production.json
+++ b/prt.graphit.sku.api/appsettings.Production.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Database": "Host=127.0.0.1;Port=5432;Database=graphit-bot-stage;Uid=postgres;Password=To1sty84;"
+    "Database": "Host=127.0.0.1;Port=5432;Database=graphit-stage;Uid=postgres;Password=To1sty84;"
   },
   "MapCatalog": {
     "Path": "D:\\FileData\\pictures_ssc_omni\\map"
