--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -10,6 +10,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      working-directory: /prt.graphit.sku.api/
 
     steps:
     - uses: actions/checkout@v2
@@ -17,7 +19,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
-        path: /prt.graphit.sku.api/
+        working-directory : ${{env.working-directory}}
     - name: Install dependencies
       run: dotnet restore
     - name: Build
