--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,7 +20,7 @@ jobs:
     - name: catalog current
       run: type -a pwd
     - name: Install dependencies
-      working-directory : ./prt.griphit.api/prt.graphit.sku.api
+      working-directory : ./prt.graphit.sku.api
       run: dotnet restore
     - name: Build
       working-directory : ./prt.griphit.api/prt.graphit.sku.api
